# seattle-energy-prediction

./: .gitignore  GEMINI.md.bak  Makefile  README.md  pyproject.toml
notebooks/: P3_modelistation_supervisee_data_scientist.ipynb  P3_template_modelistation_supervisee_data_scientist.ipynb  building_consumption_feature_cleaned.csv  building_consumption_final.csv
